@startuml
title "Bullet class diagram"
component CommonBullet {
    interface BulletSPI {
        +Entity createBullet()
    }

    class Bullet {
    }
}

component Bullet {
    class BulletControlSystem {
        +void process()
    }

    class BulletPlugin {
        +void start()
        +void stop()
        +Entity createBullet()
    }

}

BulletSPI <|.. BulletPlugin

BulletControlSystem --> CommonBullet.Bullet : updates
BulletPlugin --> CommonBullet.Bullet : instantiates
@enduml
